--- a/css/nathers-2016.styles.css
+++ b/css/nathers-2016.styles.css
@@ -308,6 +308,214 @@ table {
     line-height: 1.8rem;
     vertical-align: top; }
 
+/* line 2, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_forms.scss */
+.description {
+  display: none;
+  visibility: hidden; }
+
+/* line 8, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_forms.scss */
+.views-exposed-form .views-exposed-widget.views-submit-button {
+  margin-right: auto;
+  margin-left: auto;
+  float: none !important;
+  width: 100%;
+  text-align: center; }
+  /* line 13, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_forms.scss */
+  .views-exposed-form .views-exposed-widget.views-submit-button input {
+    margin: 0; }
+
+/* line 17, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_forms.scss */
+.views-exposed-form .views-exposed-widget:not(.views-submit-button) {
+  margin-bottom: 0.75rem;
+  padding: 0.5rem;
+  border: 1px dotted #dedede;
+  float: none; }
+  /* line 22, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_forms.scss */
+  .views-exposed-form .views-exposed-widget:not(.views-submit-button) .views-operator,
+  .views-exposed-form .views-exposed-widget:not(.views-submit-button) .dependent-options {
+    margin-bottom: 0.75rem;
+    width: 100%; }
+    /* line 26, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_forms.scss */
+    .views-exposed-form .views-exposed-widget:not(.views-submit-button) .views-operator#edit-field-date-value-min-wrapper,
+    .views-exposed-form .views-exposed-widget:not(.views-submit-button) .dependent-options#edit-field-date-value-min-wrapper {
+      margin-right: 0.5rem; }
+  /* line 30, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_forms.scss */
+  .views-exposed-form .views-exposed-widget:not(.views-submit-button).views-widget-filter-field_date_value .views-widget {
+    display: -webkit-box;
+    display: -moz-box;
+    display: box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -moz-box-pack: justify;
+    box-pack: justify;
+    -webkit-justify-content: space-between;
+    -moz-justify-content: space-between;
+    -ms-justify-content: space-between;
+    -o-justify-content: space-between;
+    justify-content: space-between;
+    -ms-flex-pack: justify; }
+
+/* line 38, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_forms.scss */
+.container-inline-date .form-item input,
+.container-inline-date .form-item,
+.views-exposed-form .container-inline-date .date-padding {
+  width: 100%; }
+
+/* line 44, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_forms.scss */
+fieldset {
+  background-color: transparent;
+  border: 0;
+  margin: 0;
+  padding: 0; }
+
+/* line 51, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_forms.scss */
+legend {
+  font-weight: 600;
+  margin-bottom: 0.75rem;
+  padding: 0; }
+
+/* line 57, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_forms.scss */
+label {
+  display: block;
+  font-family: "montserrat regular", arial, helvetica, sans-serif;
+  margin-bottom: 0.75rem; }
+
+/* line 63, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_forms.scss */
+input,
+select,
+textarea {
+  display: block;
+  font-family: "montserrat regular", arial, helvetica, sans-serif;
+  font-size: 1rem; }
+
+/* line 71, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_forms.scss */
+input[type="color"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="email"], input[type="month"], input[type="number"], input[type="password"], input[type="search"], input[type="tel"], input[type="text"], input[type="time"], input[type="url"], input[type="week"], input:not([type]), textarea,
+select[multiple],
+select {
+  font-size: 0.75rem;
+  line-height: 1.5rem;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
+  padding: 0.2rem;
+  font-family: "montserrat light", arial, helvetica, sans-serif;
+  font-family: "montserrat light", arial, helvetica, sans-serif;
+  background-color: #ededed;
+  color: #404040;
+  border: 1px solid #7f7f7f;
+  transition: border-color 0.2s ease-in;
+  width: 100%; }
+  /* line 85, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_forms.scss */
+  input[type="color"]:hover, input[type="date"]:hover, input[type="datetime"]:hover, input[type="datetime-local"]:hover, input[type="email"]:hover, input[type="month"]:hover, input[type="number"]:hover, input[type="password"]:hover, input[type="search"]:hover, input[type="tel"]:hover, input[type="text"]:hover, input[type="time"]:hover, input[type="url"]:hover, input[type="week"]:hover, input:not([type]):hover, textarea:hover,
+  select[multiple]:hover,
+  select:hover {
+    border-color: #666666; }
+  /* line 89, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_forms.scss */
+  input[type="color"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="email"]:focus, input[type="month"]:focus, input[type="number"]:focus, input[type="password"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="text"]:focus, input[type="time"]:focus, input[type="url"]:focus, input[type="week"]:focus, input:not([type]):focus, textarea:focus,
+  select[multiple]:focus,
+  select:focus {
+    border-color: #b5121b;
+    box-shadow: none;
+    outline: none; }
+  /* line 95, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_forms.scss */
+  input[type="color"]:disabled, input[type="date"]:disabled, input[type="datetime"]:disabled, input[type="datetime-local"]:disabled, input[type="email"]:disabled, input[type="month"]:disabled, input[type="number"]:disabled, input[type="password"]:disabled, input[type="search"]:disabled, input[type="tel"]:disabled, input[type="text"]:disabled, input[type="time"]:disabled, input[type="url"]:disabled, input[type="week"]:disabled, input:not([type]):disabled, textarea:disabled,
+  select[multiple]:disabled,
+  select:disabled {
+    background-color: black;
+    cursor: not-allowed; }
+    /* line 99, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_forms.scss */
+    input[type="color"]:disabled:hover, input[type="date"]:disabled:hover, input[type="datetime"]:disabled:hover, input[type="datetime-local"]:disabled:hover, input[type="email"]:disabled:hover, input[type="month"]:disabled:hover, input[type="number"]:disabled:hover, input[type="password"]:disabled:hover, input[type="search"]:disabled:hover, input[type="tel"]:disabled:hover, input[type="text"]:disabled:hover, input[type="time"]:disabled:hover, input[type="url"]:disabled:hover, input[type="week"]:disabled:hover, input:not([type]):disabled:hover, textarea:disabled:hover,
+    select[multiple]:disabled:hover,
+    select:disabled:hover {
+      border: #7f7f7f; }
+
+/* line 105, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_forms.scss */
+textarea {
+  resize: vertical; }
+
+/* line 108, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_forms.scss */
+select {
+  background-image: url("../images/select-arrow-off.png");
+  background-repeat: no-repeat;
+  background-position: 97% center;
+  -webkit-transition: background-image 0.15s ease-in;
+  -moz-transition: background-image 0.15s ease-in;
+  transition: background-image 0.15s ease-in; }
+  /* line 113, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_forms.scss */
+  select:hover {
+    background-image: url("../images/select-arrow.png"); }
+
+/* line 118, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_forms.scss */
+[type="search"] {
+  appearance: none; }
+
+/* line 122, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_forms.scss */
+[type="checkbox"],
+[type="radio"] {
+  display: inline;
+  margin-right: 0.75rem; }
+
+/* line 128, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_forms.scss */
+[type="file"] {
+  margin-bottom: 1.5rem;
+  width: 100%; }
+
+@media (min-width: 1200px) {
+  /* line 136, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_forms.scss */
+  .views-exposed-form .views-exposed-widgets {
+    display: -webkit-box;
+    display: -moz-box;
+    display: box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -moz-box-pack: justify;
+    box-pack: justify;
+    -webkit-justify-content: space-between;
+    -moz-justify-content: space-between;
+    -ms-justify-content: space-between;
+    -o-justify-content: space-between;
+    justify-content: space-between;
+    -ms-flex-pack: justify;
+    -webkit-box-lines: multiple;
+    -moz-box-lines: multiple;
+    box-lines: multiple;
+    -webkit-flex-wrap: wrap;
+    -moz-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
+    /* line 140, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_forms.scss */
+    .views-exposed-form .views-exposed-widgets > div {
+      -webkit-box-flex: 1;
+      -moz-box-flex: 1;
+      box-flex: 1;
+      -webkit-flex: 1 0 30%;
+      -moz-flex: 1 0 30%;
+      -ms-flex: 1 0 30%;
+      flex: 1 0 30%;
+      margin-right: 0.5rem;
+      margin-left: 0.5rem; }
+    /* line 144, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_forms.scss */
+    .views-exposed-form .views-exposed-widgets .views-submit-button {
+      -webkit-box-flex: 0;
+      -moz-box-flex: 0;
+      box-flex: 0;
+      -webkit-flex: 0;
+      -moz-flex: 0;
+      -ms-flex: 0;
+      flex: 0; } }
+
 /* line 3, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_header.scss */
 .l-header {
   padding-top: 0.75rem;
