--- a/sass/nathers-2016.styles.scss
+++ b/sass/nathers-2016.styles.scss
@@ -12,6 +12,7 @@
 @import "base/typography";
 @import "base/media";
 @import "base/tables";
+@import "base/forms";
 
 @import "components/header";
 @import "components/menu";
