--- a/css/nathers-2016.styles.css
+++ b/css/nathers-2016.styles.css
@@ -1257,3 +1257,55 @@ select {
     border: none;
     margin: 0;
     padding-top: 0.4rem; }
+
+/* line 4, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_publications.scss */
+.page-publications img {
+  display: none; }
+
+@media (min-width: 768px) {
+  /* line 13, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_publications.scss */
+  .page-publications img {
+    display: block;
+    float: right;
+    margin: 0 0 1rem 1rem; } }
+
+@media (min-width: 1200px) {
+  /* line 22, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_publications.scss */
+  .page-publications .view-content {
+    display: -webkit-box;
+    display: -moz-box;
+    display: box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-lines: multiple;
+    -moz-box-lines: multiple;
+    box-lines: multiple;
+    -webkit-flex-wrap: wrap;
+    -moz-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: justify;
+    -moz-box-pack: justify;
+    box-pack: justify;
+    -webkit-justify-content: space-between;
+    -moz-justify-content: space-between;
+    -ms-justify-content: space-between;
+    -o-justify-content: space-between;
+    justify-content: space-between;
+    -ms-flex-pack: justify; }
+  /* line 27, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_publications.scss */
+  .page-publications .publication-item {
+    -webkit-box-flex: 0;
+    -moz-box-flex: 0;
+    box-flex: 0;
+    -webkit-flex: 0 45%;
+    -moz-flex: 0 45%;
+    -ms-flex: 0 45%;
+    flex: 0 45%; }
+    /* line 29, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_publications.scss */
+    .page-publications .publication-item.views-row-odd {
+      margin-right: 1rem;
+      margin-bottom: 1rem;
+      margin-left: 0; } }
