--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -115,20 +115,25 @@
 		}
 	}
 }
-.pane-main-menu {
 	// Turn off links that aren't in the active trail.
-	.menu-block-wrapper > .menu {
+.menu-block-wrapper {
+	// First level
+	> .menu {
+		@include padding(0);
 		> li {
-			&:not(.active-trail) {
-				display: none;
-				visibility: hidden;
+			list-style: none;
+			display: none;
+			visibility: hidden;
+			&.active-trail {
+				display: block;
+				visibility: visible;
 			}
-			> a {
+			> a:link {
 				@include adjust-font-size-to(19.2px);
 				@include padding(rem(28.8px) 0 rem(15.36px) 0);
 				@include weight(semibold);
-				border-bottom: none;
 				color: color(green);
+				border-bottom: none;
 				line-height: rem(23.04px);
 				display: block;
 			}
@@ -136,10 +141,13 @@
 				li {
 					@include padding(rem(8px) 0);
 					border-top: 1px dotted color(grey, eighth);
-					a {
+					a:link {
 						@include adjust-font-size-to(16px);
 						@include padding(0 rem(8px));
 						@include weight(regular);
+						&.active-trail {
+							color: color(blue, three-quarter);
+						}
 						display: block;
 						border: none;
 						line-height: rem(19.2px);
@@ -147,18 +155,19 @@
 				}
 			}
 		}
-	}
-	.menu {
-		@include padding(0);
-		li {
-			list-style: none;
-			a:link {
-				@include weight(semibold);
-				@include adjust-font-size-to(19.2px);
+		.menu {
+			@include padding(0);
+			li {
+				list-style: none;
+				a:link {
+					@include weight(semibold);
+					@include adjust-font-size-to(19.2px);
+				}
 			}
 		}
 	}
-}
+} 
+
 
 // Responsiveness 
 @include breakpoint(tablet) {
