--- a/sass/nathers-2016.styles.scss
+++ b/sass/nathers-2016.styles.scss
@@ -24,3 +24,4 @@
 @import "components/content";
 @import "components/blue-box";
 @import "components/publications";
+@import "components/newsletters";
