--- a/css/nathers-2016.styles.css
+++ b/css/nathers-2016.styles.css
@@ -185,7 +185,7 @@ select:hover { background-image: url("../images/select-arrow.png"); }
 @media (min-width: 768px) { .l-branding .l-utilities { border-bottom-width: 6px; display: block; padding: 0 0.5rem; } }
 
 @media (min-width: 1200px) { .l-branding { display: -webkit-box; display: -moz-box; display: box; display: -webkit-flex; display: -moz-flex; display: -ms-flexbox; display: flex; -webkit-box-align: end; -moz-box-align: end; box-align: end; -webkit-align-items: flex-end; -moz-align-items: flex-end; -ms-align-items: flex-end; -o-align-items: flex-end; align-items: flex-end; -ms-flex-align: end; }
-  .l-branding .logo { -webkit-box-flex: 0; -moz-box-flex: 0; box-flex: 0; -webkit-flex: 0; -moz-flex: 0; -ms-flex: 0; flex: 0; margin: 0 0.6875rem 0 0; min-width: 9.375rem; }
+  .l-branding .logo { -webkit-box-flex: 0; -moz-box-flex: 0; box-flex: 0; -webkit-flex: 0; -moz-flex: 0; -ms-flex: 0; flex: 0; margin: 0 0.6875rem 0 0; min-width: 9.375rem; max-width: 100%; }
   .l-branding .l-utilities { border-top-left-radius: 0; border-top-right-radius: 0; display: -webkit-box; display: -moz-box; display: box; display: -webkit-flex; display: -moz-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -moz-box-align: center; box-align: center; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; -o-align-items: center; align-items: center; -ms-flex-align: center; -webkit-box-flex: 1; -moz-box-flex: 1; box-flex: 1; -webkit-flex: 1; -moz-flex: 1; -ms-flex: 1; flex: 1; margin: 0; padding: 0 0.9375rem; border-bottom-width: 5px; height: 4.875rem; } }
 
 .main-menu { -webkit-box-flex: 0; -moz-box-flex: 0; box-flex: 0; -webkit-flex: 0; -moz-flex: 0; -ms-flex: 0; flex: 0; margin-right: 0.5rem; width: 3rem; }
