Still trying to fix header image.

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -70,7 +70,9 @@
 			@include flex(0);
 			@include margin(0 rem(11px) 0 0);
 			min-width: rem(150px);
-			max-width: 100%;
+			img {
+				max-width: 100%;
+			}
 		}
 		.l-utilities {
 			@include border-top-radius(0);
