--- a/sass/variables/_colors.scss
+++ b/sass/variables/_colors.scss
@@ -23,7 +23,8 @@ $colors: (
 		half: #7faaca,
 		quarter: #bfd5e5,
 		eighth: #dee9f1,
-		sixteenth: #edf3f8
+		sixteenth: #edf3f8,
+		alt-link: #376e99
 	),
 	grey: (
 		full: #000000,
